--- a/src/styles/InputBox.css
+++ b/src/styles/InputBox.css
@@ -23,8 +23,7 @@ input {
   font-weight: 400;
 }
 ::placeholder {
-  /*color: #fff;*/
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.4);
 
   opacity: 1; /* Firefox */
 }
